--- a/angular/projects/shared/src/lib/components/fields/array-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/array-field.component.html
@@ -14,7 +14,7 @@
         <ng-template [ngTemplateOutlet]="itemTemplate" [ngTemplateOutletContext]="{item, removeItem: onRemoveItem, updateItem: onUpdateItem}"></ng-template>
       </div>
     </ng-container>
-    <div class="form-field__content">
+    <div *ngIf="formTemplate" class="form-field__content">
       <ng-template [ngTemplateOutlet]="formTemplate" [ngTemplateOutletContext]="{addItem: onAddItem}"></ng-template>
     </div>
   </div>
