--- a/angular/projects/admin/src/app/states/edit-state.component.html
+++ b/angular/projects/admin/src/app/states/edit-state.component.html
@@ -1,137 +1,123 @@
-<shared-form #form *ngIf="id" type="states" [hideButtons]="true" [id]="id">
-  <ng-template let-record="record" let-error="error">
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-      <h1 class="h2" i18n>{{record?.name}}</h1>
-    </div>
-    <h3>NEMSIS State Repository Data</h3>
-    <div *ngIf="!repo" class="row m-5">
-      <shared-loader></shared-loader>
-    </div>
-    <div *ngIf="repo && !repo.initialized" class="mb-3">
-      <p class="mb-3">The NEMSIS State Repository has not yet been initialized.</p>
-      <div>
-        <button [disabled]="isRepoInitializing" (click)="onRepoInit()" type="button" class="btn btn--primary me-3" i18n>Initialize State Repository</button>
-        <span *ngIf="isRepoInitializing"><shared-loader></shared-loader> Please wait...</span>
-      </div>
-    </div>
-    <div *ngIf="repo?.initialized" class="row">
-      <div class="col-lg-3">
-        <div class="mb-3">
-          <div class="array-field array-field--noclear">
-            <div class="form-field form-field--noclear form-field--nonempty">
-              <label>State Data Set Versions</label>
-              <div *ngFor="let version of repo.dataSetVersionsInstalled" class="array-field__item">
-                {{version|version}}
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3">
-        <div class="mb-3">
-          <div class="array-field array-field--noclear">
-            <div class="form-field form-field--noclear form-field--nonempty">
-              <label>State Schematron Versions</label>
-              <div *ngFor="let version of repo.schematronVersionsInstalled" class="array-field__item">
-                {{version|version}}
-              </div>
-            </div>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+  <h1 class="h2" i18n>{{state?.name}}</h1>
+</div>
+<h3>NEMSIS State Repository Data</h3>
+<div *ngIf="!repo" class="row m-5">
+  <shared-loader></shared-loader>
+</div>
+<div *ngIf="repo && !repo.initialized" class="mb-3">
+  <p class="mb-3">The NEMSIS State Repository has not yet been initialized.</p>
+  <div>
+    <button [disabled]="isRepoInitializing" (click)="onRepoInit()" type="button" class="btn btn--primary me-3" i18n>Initialize State Repository</button>
+    <span *ngIf="isRepoInitializing"><shared-loader></shared-loader> Please wait...</span>
+  </div>
+</div>
+<div *ngIf="repo?.initialized" class="row">
+  <div class="col-lg-3">
+    <div class="mb-3">
+      <div class="array-field array-field--noclear">
+        <div class="form-field form-field--noclear form-field--nonempty">
+          <label>State Data Set Versions</label>
+          <div *ngFor="let version of repo.dataSetVersionsInstalled" class="array-field__item d-flex justify-content-between align-items-center">
+            {{version|version}} 
+            <i (click)="onDataSetImport(version)" class="fas fa-file-import"></i>
           </div>
         </div>
       </div>
     </div>
-    <h3>Demographics</h3>
-    <div class="row">
-      <div class="col-lg-3">
-        <div class="mb-3">
-          <div class="array-field array-field--noclear">
-            <div class="form-field form-field--noclear form-field--nonempty">
-              <label>Agencies</label>
-              <div class="array-field__item">
+  </div>
+  <div class="col-lg-3">
+    <div class="mb-3">
+      <div class="array-field array-field--noclear">
+        <div class="form-field form-field--noclear form-field--nonempty">
+          <label>State Schematron Versions</label>
+          <div *ngFor="let version of repo.schematronVersionsInstalled" class="array-field__item">
+            {{version|version}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div *ngIf="state?.status?.message" class="row">
+  <div class="col-lg-6">
+    <div class="alert alert-info">
+      <div class="d-flex justify-content-between align-items-center">
+        <div><shared-loader *ngIf="state.status?.code === 202"></shared-loader> {{state.status?.message}}</div>
+        <i (click)="onCancelDataSetImport()" class="far fa-times-circle"></i>
+      </div>    
+    </div>
+  </div>
+</div>
+<h3>Demographics</h3>
+<div class="row">
+  <div class="col-lg-3">
+    <div class="mb-3">
+      <div class="array-field array-field--noclear">
+        <div class="form-field form-field--noclear form-field--nonempty">
+          <label>Agencies</label>
+          <div class="array-field__item">
 
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3">
-        <div class="mb-3">
-          <shared-array-field id="borderStates" label="Bordering States" [source]="record" [showClearButton]="false">
-            <ng-template #item let-stateId="item">
-              {{state(stateId)?.name}}
-            </ng-template>
-          </shared-array-field>
-        </div>
-      </div>
-      <div class="col-lg-3">
-        <div class="mb-3">
-          <div class="array-field array-field--noclear">
-            <div class="form-field form-field--noclear form-field--nonempty">
-              <label>Cities</label>
-              <div class="array-field__item">
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3">
-        <div class="mb-3">
-          <div class="array-field array-field--noclear">
-            <div class="form-field form-field--noclear form-field--nonempty">
-              <label>Counties</label>
-              <div class="array-field__item">
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3">
-        <div class="mb-3">
-          <div class="array-field array-field--noclear">
-            <div class="form-field form-field--noclear form-field--nonempty">
-              <label>Facilities</label>
-              <div class="array-field__item">
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3">
-        <div class="mb-3">
-          <div class="array-field array-field--noclear">
-            <div class="form-field form-field--noclear form-field--nonempty">
-              <label>PSAPs</label>
-              <div class="array-field__item">
-
-              </div>
-            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="row mt-5">
-      <div class="col-lg-6">
-        <ngb-alert *ngIf="isConfiguring" type="info" [dismissible]="false">
-          <div><shared-loader></shared-loader> {{status || 'Please wait...'}}</div>
-        </ngb-alert>
-        <ngb-alert *ngIf="isError" type="danger" [dismissible]="false">
-          <div>{{status}}</div>
-        </ngb-alert>
-        <fieldset [disabled]="isConfiguring">
-          <div class="mb-3">
-            <shared-text-field id="name" label="Name" [source]="record" [error]="error"></shared-text-field>
-          </div>
-          <div class="mb-3">
-            <shared-checkbox id="isConfigured" label="Is configured?" [source]="record"></shared-checkbox>
-          </div>
-          <div class="mb-3">
-            <button (click)="onConfigure()" type="button" class="btn btn--primary" i18n>Configure</button>
-          </div>
-        </fieldset>
-      </div>  
+  </div>
+  <div class="col-lg-3">
+    <div class="mb-3">
+      <shared-array-field id="borderStates" label="Bordering States" [source]="state" [showClearButton]="false">
+        <ng-template #item let-stateId="item">
+          {{stateById(stateId)?.name}}
+        </ng-template>
+      </shared-array-field>
     </div>
-  </ng-template>
-</shared-form>  
+  </div>
+  <div class="col-lg-3">
+    <div class="mb-3">
+      <div class="array-field array-field--noclear">
+        <div class="form-field form-field--noclear form-field--nonempty">
+          <label>Cities</label>
+          <div class="array-field__item">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="mb-3">
+      <div class="array-field array-field--noclear">
+        <div class="form-field form-field--noclear form-field--nonempty">
+          <label>Counties</label>
+          <div class="array-field__item">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="mb-3">
+      <div class="array-field array-field--noclear">
+        <div class="form-field form-field--noclear form-field--nonempty">
+          <label>Facilities</label>
+          <div class="array-field__item">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="mb-3">
+      <div class="array-field array-field--noclear">
+        <div class="form-field form-field--noclear form-field--nonempty">
+          <label>PSAPs</label>
+          <div class="array-field__item">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
