Display Agency stats

--- a/angular/projects/admin/src/app/states/edit-state.component.html
+++ b/angular/projects/admin/src/app/states/edit-state.component.html
@@ -57,7 +57,7 @@
         <div class="form-field form-field--noclear form-field--nonempty">
           <label>Agencies</label>
           <div class="array-field__item">
-
+            Total: {{this.agencyStats?.count}}
           </div>
         </div>
       </div>
