--- a/angular/projects/admin/src/app/states/edit-state.component.html
+++ b/angular/projects/admin/src/app/states/edit-state.component.html
@@ -71,8 +71,6 @@
         </ng-template>
       </shared-array-field>
     </div>
-  </div>
-  <div class="col-lg-3">
     <div class="mb-3">
       <div class="array-field array-field--noclear">
         <div class="form-field form-field--noclear form-field--nonempty">
@@ -86,8 +84,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-lg-3">
     <div class="mb-3">
       <div class="array-field array-field--noclear">
         <div class="form-field form-field--noclear form-field--nonempty">
@@ -120,7 +116,7 @@
         <div class="form-field form-field--noclear form-field--nonempty">
           <label>PSAPs</label>
           <div class="array-field__item">
-
+            Total: {{psapStats?.count}}
           </div>
         </div>
       </div>
