Fix query so that Claimed records can be fetched, allow editing NEMSIS Versions

--- a/angular/projects/admin/src/app/agencies/edit-agency.component.html
+++ b/angular/projects/admin/src/app/agencies/edit-agency.component.html
@@ -18,6 +18,15 @@
         </shared-select-field>
       </div>
       <div class="mb-3">
+        <shared-text-field id="nemsisVersion" label="NEMSIS Version" [source]="record" [target]="record" [error]="error"></shared-text-field>
+      </div>
+      <div class="mb-3">
+        <shared-text-field id="stateDataSetVersion" label="State Data Set Version" [source]="record" [target]="record" [error]="error"></shared-text-field>
+      </div>
+      <div class="mb-3">
+        <shared-text-field id="stateSchematronVersion" label="State Schematron Version" [source]="record" [target]="record" [error]="error"></shared-text-field>
+      </div>
+      <div class="mb-3">
         <shared-text-field id="stateUniqueId" label="State Unique Id" [source]="record" [target]="record" [error]="error"></shared-text-field>
       </div>
       <div class="mb-3">
