--- a/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
@@ -1,3 +1,21 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
   <h1 class="h2">Dashboard</h1>
 </div>
+<div class="row">
+  <div class="col-lg-4">
+    <div class="array-field array-field--noclear">
+      <div class="form-field form-field--noclear form-field--nonempty">
+        <label>Current Settings</label>
+        <div class="array-field__item">
+          NEMSIS: {{agency?.nemsisVersion}}
+        </div>
+        <div class="array-field__item">
+          State Data Set: {{agency?.stateDataSetVersion|version}}
+        </div>
+        <div class="array-field__item">
+          State Schematron: {{agency?.stateSchematronVersion|version}}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
