--- a/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
@@ -1,21 +1,53 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
   <h1 class="h2">Dashboard</h1>
 </div>
-<div class="row">
-  <div class="col-lg-4">
-    <div class="array-field array-field--noclear">
-      <div class="form-field form-field--noclear form-field--nonempty">
-        <label>Current Settings</label>
-        <div class="array-field__item">
-          NEMSIS: {{agency?.nemsisVersion}}
-        </div>
-        <div class="array-field__item">
-          State Data Set: {{agency?.stateDataSetVersion|version}}
-        </div>
-        <div class="array-field__item">
-          State Schematron: {{agency?.stateSchematronVersion|version}}
+<form>
+  <h4>Current</h4>
+  <div class="row mb-5">
+    <div class="col-lg-4">
+      <div class="array-field array-field--noclear">
+        <div class="form-field form-field--noclear form-field--nonempty">
+          <label>Settings</label>
+          <div class="array-field__item">
+            <span>Version:</span> {{agency?.version?.name|version}}
+          </div>
+          <div class="array-field__item">
+            <span>NEMSIS:</span> {{agency?.version?.nemsisVersion}}
+          </div>
+          <div class="array-field__item">
+            <span>State Data Set:</span> {{agency?.version?.stateDataSetVersion|version}}
+          </div>
+          <div class="array-field__item">
+            <span>State Schematron:</span> {{agency?.version?.stateSchematronVersion|version}}
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+  <div *ngIf="agency?.draftVersion">
+    <h4>Draft</h4>
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="array-field array-field--noclear mb-3">
+          <div class="form-field form-field--noclear form-field--nonempty">
+            <label>Settings</label>
+            <div class="array-field__item">
+              <span>Version:</span> {{agency?.draftVersion?.name|version}}
+            </div>
+            <div class="array-field__item">
+              <span>NEMSIS:</span> {{agency?.draftVersion?.nemsisVersion}}
+            </div>
+            <div class="array-field__item">
+              <span>State Data Set:</span> {{agency?.draftVersion?.stateDataSetVersion|version}}
+            </div>
+            <div class="array-field__item">
+              <span>State Schematron:</span> {{agency?.draftVersion?.stateSchematronVersion|version}}
+            </div>
+          </div>
+        </div>
+        <button type="button" class="btn btn--primary me-3">Preview</button>
+        <button type="button" class="btn btn--primary">Validate</button>
+      </div>
+    </div>  
+  </div>
+</form>
