--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -287,20 +287,28 @@ select:disabled {
 }
 
 .array-field__item {
-  position: relative;
   @include h3-semibold;
-  color: $base-800;
-  cursor: grab;
+
+  position: relative;
   padding: 0.375rem 0.875rem;
+  color: $base-800;
+
+  cursor: grab;
+  &.sortable-chosen {
+    cursor: grabbing;
+  }
+
   & + .array-field__item {
     border-top: 2px solid $brand-primary-300;
   }
+
   h5 {
     color: $brand-primary-500;
     margin-bottom: 0;
   }
-  &.sortable-chosen {
-    cursor: grabbing;
+
+  span {
+    color: $base-500;
   }
 
   .input-group {
