Setting up Admin for Versions

--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -31,6 +31,9 @@
     <li>
       <a routerLink="/demographics/vehicles" routerLinkActive="sidebar__item--active" class="sidebar__item">Vehicles</a>
     </li>
+    <li>
+      <a routerLink="/demographics/versions" routerLinkActive="sidebar__item--active" class="sidebar__item">Versions</a>
+    </li>
     <!--
     <li>
       <a routerLink="/demographics/custom-configuration" routerLinkActive="sidebar__item--active" class="sidebar__item">Demographics</a>
