--- a/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn--primary me-3">Preview</button>
+        <button type="button" class="btn btn--primary me-3" [routerLink]="['/demographics/versions', agency.draftVersion.id, 'preview']">Preview</button>
         <button type="button" class="btn btn--primary">Validate</button>
       </div>
     </div>  
