--- a/angular/projects/admin/src/app/demographics/versions/preview-version-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/versions/preview-version-demographics.component.html
@@ -7,6 +7,8 @@
       <li class="nav__item"><a tabIndex="0" class="nav__link" routerLink="..">Details</a></li>
       <li class="nav__item"><a tabIndex="0" class="nav__link nav__link--active">XML</a></li>
     </ul>  
-    TODO
   </div>
+</div>
+<div>
+  <pre>{{xml}}</pre>
 </div>
