--- a/angular/projects/admin/src/app/schema/schema-record.component.html
+++ b/angular/projects/admin/src/app/schema/schema-record.component.html
@@ -22,7 +22,7 @@
     <ng-template [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{record, error}"></ng-template>
     <div class="d-flex justify-content-between mb-3">
       <button *ngIf="isNewRecord || isEditingDraft || !record.draft" type="submit" class="btn btn--primary">Save Draft</button>
-      <button *ngIf="isEditingDraft" (click)="onDeleteDraft()" type="button" class="btn btn--danger">Delete Draft</button>
+      <button *ngIf="isEditingDraft || record.isDraft" (click)="onDeleteDraft()" type="button" class="btn btn--danger">Delete Draft</button>
     </div>
   </fieldset>
 </form>
