Support archiving schema records

--- a/angular/projects/admin/src/app/schema/schema-list.component.html
+++ b/angular/projects/admin/src/app/schema/schema-list.component.html
@@ -16,7 +16,7 @@
       </tr>
     </thead>
     <tbody *ngIf="data">
-      <tr *ngFor="let record of data" [routerLink]="record.id">
+      <tr *ngFor="let record of data" [routerLink]="record.id" [class.text-decoration-line-through]="record.draft?.archivedAt">
         <td><i *ngIf="record.isDraft || record.draft" class="fas fa-exclamation-triangle"></i></td>
         <td *ngFor="let column of schemaColumns">
           {{((record.draft?.data ?? record.data)|get:column.attr)?._text}}
