--- a/angular/projects/admin/src/app/schema/schema-record.component.html
+++ b/angular/projects/admin/src/app/schema/schema-record.component.html
@@ -6,6 +6,9 @@
     <li class="nav__item"><a tabIndex="0" class="nav__link" [class.nav__link--active]="isEditingDraft" (click)="isEditingDraft = true">Draft</a></li>
     <li class="nav__item"><a tabIndex="0" class="nav__link" [class.nav__link--active]="!isEditingDraft" (click)="isEditingDraft = false">Current</a></li>
   </ul>
+  <div *ngIf="isUnarchived" class="alert alert-success">
+    Record restored!
+  </div>
   <div *ngIf="isDraftDeleted" class="alert alert-success">
     Draft deleted!
   </div>
@@ -15,7 +18,15 @@
   <div *ngIf="error && (isNewRecord || isEditingDraft)" class="alert alert-danger">
     <shared-error [error]="error"></shared-error>
   </div>
-  <fieldset [disabled]="isLoading">
+  <ng-container *ngIf="isEditingDraft && record.archivedAt">
+    <div class="alert alert-danger">
+      This record has been marked for achival.
+    </div>
+    <div class="d-flex justify-content-between mb-3">
+      <button (click)="onDeleteDraft()" type="button" class="btn btn--primary">Undo Archive</button>
+    </div>
+  </ng-container>
+  <fieldset *ngIf="!(isEditingDraft && record.archivedAt)" [disabled]="isLoading">
     <ng-container *ngFor="let element of childElements">
       <shared-xsd-form-group [element]="element" [data]="record.data" [error]="error"></shared-xsd-form-group>
     </ng-container>
@@ -23,6 +34,7 @@
     <div class="d-flex justify-content-between mb-3">
       <button *ngIf="isNewRecord || isEditingDraft || !record.draft" type="submit" class="btn btn--primary">Save Draft</button>
       <button *ngIf="isEditingDraft || record.isDraft" (click)="onDeleteDraft()" type="button" class="btn btn--danger">Delete Draft</button>
+      <button *ngIf="!(isNewRecord || isEditingDraft || record.isDraft) && !record.draft" (click)="onArchive()" type="button" class="btn btn--danger">Archive</button>
     </div>
   </fieldset>
 </form>
