--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,40 +30,55 @@
   <section id="solution">
     <div class="container">
       <h2>Our Solution</h2>
-      <h3>Coordination and documentation software that doesn’t distract from patient care.</h3>
-      <div class="row">
-        <div class="col-lg-8 order-lg-2">
-          <img src="/images/home1.jpg" alt="Peak Response mobile app and web dashboard">
-        </div>
-        <div class="col-lg-4 order-lg-1">
-          <p>Peak Response simplifies real-time patient data capture by combining user-centered design principles and powerful modern technology. Originally created to be used during mass casualty incidents, the Peak Response software performs under pressure and without pulling attention away from patient care and coordination. Using a combination of hands-free voice-to-text form filling, instant information syncing, accurate time-stamping, and integrated data transfer, the software enables first responders to document patients and coordinate care with ease during regular incidents and mass casualties alike.</p>
-          <p>Peak Response was designed to work well with existing tools and protocols and can be run on smartphones, tablets, and laptops already owned by many departments, so no proprietary hardware is required. The data collected by the software helps with real-time care and can easily transfer into an electronic patient care report for more accurate final documentation after an incident is complete.</p>
+      <div class="solution">
+        <div class="row">
+          <div class="col-lg-8">
+            <h3 class="mt-lg-5">Streamlined Communication for <br class="d-none d-lg-inline" />Optimal Patient Care</h3>
+            <p>Peak Response enables first responders to capture patient observations from the very first moments on scene into a standardized electronic record that can be transferred into subsequent pre-hospital and hospital systems.</p>
+          </div>
+          <div class="col-lg-4 position-relative">
+            <img class="solution__iphone" src="/images/iphone01.png" alt="Peak Response mobile app form">
+          </div>
+          <div class="col-lg-12 solution__highlight">
+            <div class="row mb-0">
+              <div class="col-lg-8">
+                <ul>
+                  <li>Fill out forms without having to type using <b>Voice-to-Text</b></li>
+                  <li>View ER bed availability and notify destination hospitals using the <b>Routed</b> real-time network</li>
+                  <li>Save time and paper with <b>electronic signature capture</b></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-12 mt-3 text-center text-lg-start">
+            <a class="btn btn--primary" href="/run-reporting">Learn More</a>
+          </div>
         </div>
       </div>
     </div>
-    <div class="bg-alternate pt-5">
-      <div class="container">
-        <h2>Key Features</h2>
+    <div class="bg-alternate py-5">
+      <div class="solution container">
         <div class="row">
-          <div class="col-lg text-center mb-5">
-            <div class="solution__feature"><img src="/images/feature1.png" alt="Hands-Free" /></div>
-            <h4>Hands-Free<br />Voice-to-Text<br />Documentation</h4>
+          <div class="col-lg-8 order-lg-2">
+            <h3 class="mt-lg-5">Scalable from Daily Dispatched Runs to <br class="d-none d-lg-inline" />Mass Casualty Incidents</h3>
+            <p>The best tool for an unexpected emergency is the one you already use every day. At the touch of a button, Peak Response becomes a real-time MCI coordination and situational awareness tool for responders on and off the scene.</p>
           </div>
-          <div class="col-lg text-center mb-5">
-            <div class="solution__feature"><img src="/images/feature2.png" alt="Real-Time" /></div>
-            <h4>Real-Time<br />Information<br />Syncing</h4>
+          <div class="col-lg-4 order-lg-1 position-relative">
+            <img class="solution__iphone" src="/images/iphone02.png" alt="Peak Response mobile app MCI patient counts">
           </div>
-          <div class="col-lg text-center mb-5">
-            <div class="solution__feature"><img src="/images/feature3.png" alt="Time-Stamped" /></div>
-            <h4>Time-Stamped<br />Data</h4>
+          <div class="col-lg-12 order-lg-3 solution__highlight">
+            <div class="row mb-0">
+              <div class="col-lg-8 offset-lg-4">
+                <ul>
+                  <li>Watch initial approximate <b>patient counts</b> tally up in real-time without radio back-and-forth</li>
+                  <li><b>Scan any triage tag barcode</b> and attach an electronic record using the same hands-free Voice-to-Text interface</li>
+                  <li>Automatically capture the GPS <b>location of patients</b> and visualize them on a map</li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="col-lg text-center mb-5">
-            <div class="solution__feature"><img src="/images/feature4.png" alt="Commodity Hardware" /></div>
-            <h4>Runs on<br />Commodity<br />Hardware</h4>
-          </div>
-          <div class="col-lg text-center mb-5">
-            <div class="solution__feature"><img src="/images/feature5.png" alt="Integrated" /></div>
-            <h4>Integrated with<br />CAD & ePCR</h4>
+          <div class="col-lg-8 offset-lg-4 order-lg-4 mt-3 text-center text-lg-start">
+            <a class="btn btn--primary" href="/mass-casualty">Learn More</a>
           </div>
         </div>
       </div>
@@ -95,8 +110,7 @@
     <div class="container">
       <h2>Our Story</h2>
       <h3>Dedicated to providing life saving efficiency.</h3>
-      <p>Peak Response (originally NaTriage) was initially conceptualized in 2019 as part of the Tech to Protect Challenge, sponsored by NIST PSCR, aimed at fostering technological innovation for emergency responders. The solution came out of a focus on a common pain point: time spent documenting injuries and incidents at the scene of mass casualty incidents. These incidents are chaotic, high-pressure environments where time spent documenting can mean the difference between life and death. The quick tag scan and speech-to-text form filling were the first features, but the solution quickly expanded to include a variety of powerful sorting and data export options to improve efficiency, both at the point of contact with the patient and also for the incident commander monitoring the entire scene.</p>
-      <p>The Peak Response software has now expanded beyond mass casualties and a version designed specifically for quick daily patient documentation is in development and testing.</p>
+      <p class="mb-5">Peak Response (formerly NaTriage) was initially conceptualized in 2019 as part of the Tech to Protect Challenge, sponsored by NIST PSCR, aimed at fostering technological innovation for emergency responders. The solution came out of a focus on a common pain point: time spent documenting injuries and incidents at the scene of mass casualty incidents. These incidents are chaotic, high-pressure environments where time spent documenting can mean the difference between life and death. The quick tag scan and speech-to-text form filling were the first features, but the solution quickly expanded to include a variety of powerful sorting and data export options to improve efficiency, both at the point of contact with the patient and also for the incident commander monitoring the entire scene.</p>
       <div id="story__bios" class="row">
         <div class="col-lg-3">
           <img src="/images/bio-francis.jpg" alt="Portrait of Francis Li">
