--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg fixed-top<%= locals.top === true ? ' top' : '' %>">
     <div class="container">
       <a class="navbar-brand" href="/#home"><img src="/images/logo.png" alt="NaT" /></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="ncavbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -21,9 +21,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/#contact">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn btn--primary btn--sm" href="/sign-up">Sign Up</a>
           </li>
         </ul>
       </div>
