First pass, adding back in Configuration editing

--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -9,11 +9,11 @@
     </li>
     <!-- <li>
       <a routerLink="/demographics/contacts" routerLinkActive="sidebar__item--active" class="sidebar__item">Contacts</a>
-    </li>
+    </li>-->
     <li>
-      <a routerLink="/demographics/configuration" routerLinkActive="sidebar__item--active" class="sidebar__item">Configuration</a>
+      <a routerLink="/demographics/configurations" routerLinkActive="sidebar__item--active" class="sidebar__item">Configurations</a>
     </li>
-    <li>
+    <!-- <li>
       <a routerLink="/demographics/devices" routerLinkActive="sidebar__item--active" class="sidebar__item">Devices</a>
     </li>
     <li>
