--- a/angular/projects/shared/src/lib/components/fields/xsd/xsd-form-group.component.html
+++ b/angular/projects/shared/src/lib/components/fields/xsd/xsd-form-group.component.html
@@ -40,7 +40,7 @@
   <ng-container *ngIf="!isMulti">
     <div *ngIf="isDisplayOnly">
       <h5 [class.text-danger]="isInvalid">{{displayName}}<sup *ngIf="isRequired">*</sup>&nbsp;<small class="font-weight-normal text-muted">({{name}})</small></h5>
-      <shared-xsd-element [element]="element" [data]="data" [displayOnly]="true" [error]="error"></shared-xsd-element>
+      <shared-xsd-element [basePath]="basePath" [element]="element" [data]="data" [displayOnly]="true" [error]="error"></shared-xsd-element>
       <div *ngIf="isInvalid" class="invalid-feedback">
         <span >{{errorMessages.join(' ')}}</span>
       </div>
@@ -49,7 +49,7 @@
       <label [for]="formName">
         {{displayName}}<sup *ngIf="isRequired">*</sup>&nbsp;<small class="font-weight-normal text-muted">({{name}})</small>
       </label>
-      <shared-xsd-element [element]="element" [data]="data" [error]="error"></shared-xsd-element>
+      <shared-xsd-element [basePath]="basePath" [element]="element" [data]="data" [error]="error"></shared-xsd-element>
       <span [class.feedback]="!isInvalid" [class.invalid-feedback]="isInvalid">
         {{displayText}}
         <span *ngIf="isInvalid">{{errorMessages.join(' ')}}</span>
@@ -60,7 +60,7 @@
     <ng-container *ngIf="isDisplayOnly">
       <h5 [class.text-danger]="isInvalid">{{displayName}}<sup *ngIf="isRequired">*</sup>&nbsp;<small class="font-weight-normal text-muted">({{name}})</small></h5>
       <div *ngFor="let selectedValue of values; index as i">
-        <shared-xsd-element [element]="element" [data]="data" [error]="error" [index]="i" [selectedValue]="selectedValue" [displayOnly]="true"></shared-xsd-element>
+        <shared-xsd-element [basePath]="basePath" [element]="element" [data]="data" [error]="error" [index]="i" [selectedValue]="selectedValue" [displayOnly]="true"></shared-xsd-element>
       </div>
       <div *ngIf="isInvalid" class="invalid-feedback">
         <span >{{errorMessages.join(' ')}}</span>
@@ -71,7 +71,7 @@
         {{displayName}}<sup *ngIf="isRequired">*</sup>&nbsp;<small class="font-weight-normal text-muted">({{name}})</small>
       </label>
       <div *ngFor="let selectedValue of values; index as i" class="array-field__item" [class.array-field__item--invalid]="isInvalidValue(i)">
-        <shared-xsd-element [element]="element" [data]="data" [error]="error" [index]="i" [selectedValue]="selectedValue"></shared-xsd-element>
+        <shared-xsd-element [basePath]="basePath" [element]="element" [data]="data" [error]="error" [index]="i" [selectedValue]="selectedValue"></shared-xsd-element>
         <div [class.feedback]="!isInvalidValue(i)" [class.invalid-feedback]="isInvalidValue(i)">
           <span *ngIf="isInvalidValue(i)">{{errorMessagesForValue(i).join(' ')}}</span>
         </div>
