Start cleaning out deprecated data set code

--- a/angular/projects/admin/src/app/demographics/configurations-list-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/configurations-list-demographics.component.html
@@ -5,4 +5,7 @@
                    [keyPath]="['demographics', 'configurations']"
                    schemaPath="/nemsis/xsd/dConfiguration_v3.json"
                    [schemaColumns]="sectionColumns">
+  <ng-container class="admin-schema-list-header">
+    <button (click)="onImport()" class="btn btn--sm btn--secondary ms-3">Import from State Data Set</button>
+  </ng-container>
 </admin-schema-list>
