--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -293,11 +293,6 @@ select:disabled {
   padding: 0.375rem 0.875rem;
   color: $base-800;
 
-  cursor: grab;
-  &.sortable-chosen {
-    cursor: grabbing;
-  }
-
   & + .array-field__item {
     border-top: 2px solid $brand-primary-300;
   }
@@ -329,6 +324,15 @@ select:disabled {
     margin-left: 0;
     span {
       color: $brand-secondary-500;
+    }
+  }
+}
+
+.form-field--editing {
+  .array-field__item {
+    cursor: grab;
+    &.sortable-chosen {
+      cursor: grabbing;
     }
   }
 }
