--- a/angular/projects/shared/src/lib/components/fields/array-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/array-field.component.html
@@ -7,7 +7,7 @@
     [class.form-field--nonempty]="isNonEmpty"
     [class.form-field--unconfirmed]="isUnconfirmed"
     (update)="onSorted($event)"
-    [sortablejs]="value">
+    [sortablejs]="value" [sortablejsOptions]="{ sort: isEditing }">
     <label>{{label}}</label>
     <ng-container *ngIf="value && value.length > 0">
       <div *ngFor="let item of value; let i=index" [attr.data-index]="i" class="array-field__item" (click)="onClick($event)">
