--- a/angular/projects/admin/src/app/states/edit-state.component.html
+++ b/angular/projects/admin/src/app/states/edit-state.component.html
@@ -1,12 +1,16 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
   <h1 class="h2" i18n>{{state?.name}}</h1>
 </div>
-<div *ngIf="state?.status?.message" class="row">
-  <div class="col-lg-6">
-    <div class="alert alert-info">
-      <div class="d-flex justify-content-between align-items-center">
-        <div><shared-loader *ngIf="state.status?.code === 202"></shared-loader> {{state.status?.message}}</div>
-        <i (click)="onCancelDataSetImport()" class="far fa-times-circle"></i>
+<h3>Status</h3>
+<div *ngIf="state" class="mb-3">
+  <shared-checkbox [id]="state.id" label="Sign-ups Enabled" name="isConfigured" [source]="state" [target]="state" (valueChange)="onSignupsEnabledChange($event)"></shared-checkbox>
+  <div *ngIf="state?.status?.message" class="row">
+    <div class="col-lg-6">
+      <div class="alert alert-info">
+        <div class="d-flex justify-content-between align-items-center">
+          <div><shared-loader *ngIf="state.status?.code === 202"></shared-loader> {{state.status?.message}}</div>
+          <i (click)="onCancelDataSetImport()" class="far fa-times-circle"></i>
+        </div>
       </div>
     </div>
   </div>
@@ -69,8 +73,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-lg-3">
     <div class="mb-3">
       <shared-array-field id="borderStates" label="Bordering States" [source]="state" [isFocusable]="false" [showClearButton]="false">
         <ng-template #item let-stateId="item">
@@ -78,6 +80,8 @@
         </ng-template>
       </shared-array-field>
     </div>
+  </div>
+  <div class="col-lg-3">
     <div class="mb-3">
       <div class="array-field array-field--noclear">
         <div class="form-field form-field--noclear form-field--nonempty">
