--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -230,6 +230,13 @@ select:disabled {
   padding-top: 0.375rem;
 }
 
+.form-check--editing {
+  .form-check-input,
+  .form-check-label {
+    cursor: pointer;
+  }
+}
+
 .form-field-group {
   display: flex;
 
