Starting new NEMSIS Admin dashboard

--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -57,6 +57,9 @@
       <a routerLink="/lists" routerLinkActive="sidebar__item--active" class="sidebar__item">Lists</a>
     </li>
     <li>
+      <a routerLink="/nemsis" routerLinkActive="sidebar__item--active" class="sidebar__item">NEMSIS</a>
+    </li>
+    <li>
       <a routerLink="/psaps" routerLinkActive="sidebar__item--active" class="sidebar__item">PSAPs</a>
     </li>
     <li>
