--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -59,6 +59,9 @@ form {
     @include h4-semibold;
     margin: 0.375rem 0.875rem 0;
     color: $base-500;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 
     & + input,
     & + select,
