Starting State Data Set handling refactor

--- a/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/dashboard-demographics.component.html
@@ -15,7 +15,7 @@
             <span>NEMSIS:</span> {{agency?.version?.nemsisVersion}}
           </div>
           <div class="array-field__item">
-            <span>State Data Set:</span> {{agency?.version?.stateDataSetVersion|version}}
+            <!-- <span>State Data Set:</span> {{agency?.version?.stateDataSetVersion|version}} -->
           </div>
           <div class="array-field__item">
             <span>State Schematron:</span> {{agency?.version?.stateSchematronVersion|version}}
@@ -38,7 +38,7 @@
               <span>NEMSIS:</span> {{agency?.draftVersion?.nemsisVersion}}
             </div>
             <div class="array-field__item">
-              <span>State Data Set:</span> {{agency?.draftVersion?.stateDataSetVersion|version}}
+              <!-- <span>State Data Set:</span> {{agency?.draftVersion?.stateDataSetVersion|version}} -->
             </div>
             <div class="array-field__item">
               <span>State Schematron:</span> {{agency?.draftVersion?.stateSchematronVersion|version}}
