--- a/angular/projects/admin/src/app/demographics/versions/edit-version-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/versions/edit-version-demographics.component.html
@@ -17,7 +17,7 @@
           <shared-text-field id="nemsisVersion" label="NEMSIS Version" [source]="record" [error]="error"></shared-text-field>
         </div>
         <div class="mb-3">
-          <shared-text-field id="stateDataSetVersion" label="State Data Set Version" [source]="record" [error]="error"></shared-text-field>
+          <!-- <shared-text-field id="stateDataSetVersion" label="State Data Set Version" [source]="record" [error]="error"></shared-text-field> -->
         </div>
         <div class="mb-3">
           <shared-text-field id="stateSchematronVersion" label="State Schematron Version" [source]="record" [error]="error"></shared-text-field>
